@@ -79,6 +79,7 @@ Bugs fixed
 - Bug 2246 - Some DSR LogComponents and classes are not defined in a unique way.
 - Bug 2254 - Ipv[4,6]RawSocket can return the wrong number of bytes sent.
 - Bug 2255 - Ipv6RawSocket does not call data sent callbacks.
+- Bug 2257 - Ipv[4,6]InterfaceContainer::Add are not consistent
 
 Known issues
 ------------
